--- a/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uxml
+++ b/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uxml
@@ -12,4 +12,10 @@ xsi:schemaLocation="
                         UnityEditor.PackageManager.UI ../../../UIElementsSchema/UnityEditor.PackageManager.UI.xsd
 "
 >
+
+      <engine:VisualElement name="Selection" class="horizontalContainer">
+        <editor:ObjectField/>
+        <engine:Button />
+      </engine:VisualElement>
+
 </engine:UXML>
