just some tests with object drag

--- a/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uxml
+++ b/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uxml
@@ -15,6 +15,7 @@ xsi:schemaLocation="
 
       <engine:VisualElement name="Selection" class="horizontalContainer">
         <editor:ObjectField/>
+        <!-- engine:Label name="Dragger" text="Drag"/ -->
         <engine:Button />
       </engine:VisualElement>
 
