changing to use a label instead of object field

--- a/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uxml
+++ b/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uxml
@@ -14,7 +14,7 @@ xsi:schemaLocation="
 >
 
       <engine:VisualElement name="Selection" class="horizontalContainer">
-        <editor:ObjectField/>
+        <engine:Label name="ObjectName" />
         <!-- engine:Label name="Dragger" text="Drag"/ -->
         <engine:Button />
       </engine:VisualElement>
