--- a/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uss
+++ b/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uss
@@ -1,6 +1,6 @@
 #Selection {
     padding: 1px;
-    background-color: rgba(25, 25, 25, 1);
+    background-color: rgba(25, 25, 25, 0);
     flex-direction: row;
 }
 
@@ -13,6 +13,15 @@
     background-color: rgba(10, 10, 10, 1);
     border-color: rgba(0, 0, 0, 1);
     border-width: 1px;
+}
+
+#Selection #ObjectName {
+    flex-grow: 1;
+    background-image: none;
+    background-color: rgba(10, 10, 10, 1);
+    border-color: rgba(0, 0, 0, 1);
+    border-width: 1px;
+    margin-right: 5px;
 }
 
 #Selection .unity-label {
