show object thumbnail in editor

--- a/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uss
+++ b/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uss
@@ -15,6 +15,14 @@
     border-width: 1px;
 }
 
+#Selection #ObjectThumbnail {
+    flex-grow: 1;
+    background-image: none;
+    max-width: 16px;
+    max-height: 16px;
+    margin: 2px;
+}
+
 #Selection #ObjectName {
     flex-grow: 1;
     background-image: none;
