--- a/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uxml
+++ b/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uxml
@@ -14,6 +14,7 @@ xsi:schemaLocation="
 >
 
       <engine:VisualElement name="Selection" class="horizontalContainer">
+        <engine:Image name="ObjectThumbnail" />
         <engine:Label name="ObjectName" />
         <!-- engine:Label name="Dragger" text="Drag"/ -->
         <engine:Button />
