--- a/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uxml
+++ b/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uxml
@@ -16,7 +16,7 @@ xsi:schemaLocation="
       <engine:VisualElement name="Selection" class="horizontalContainer">
         <engine:VisualElement name="SelectionLabel">
           <engine:Image name="ObjectThumbnail" />
-          <engine:Label name="ObjectName" />
+          <!-- engine:Label name="ObjectName" / -->
         </engine:VisualElement>
         <!-- engine:Label name="Dragger" text="Drag"/ -->
         <engine:Button />
