changed to expand label to consider all area for dragging

--- a/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uss
+++ b/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uss
@@ -35,14 +35,17 @@
 }
 
 .selection-normal {
+    flex-grow: 1;
     color: rgba(255, 255, 255, 1);
 }
 
 .selection-current {
+    flex-grow: 1;
     color: rgba(0, 200, 255, 1);
 }
 
 .selection-in-hierarchy {
+    flex-grow: 1;
     color: #88D988;
 }
 
