scroll is expanded to fill vertical space fixing scroll location with a small delay to scroll to object added

--- a/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uss
+++ b/Assets/Gemserk.SelectionHistory/Editor/NewWindow/SelectionHistoryNewWindow.uss
@@ -4,6 +4,10 @@
     flex-direction: row;
 }
 
+.history-selection-container {
+    flex-grow: 1;
+}
+
 #HistoryObject > ObjectField {
     flex-grow: 1;
 }
