--- a/Assets/Editor/FavoriteAssetsWindow.uss
+++ b/Assets/Editor/FavoriteAssetsWindow.uss
@@ -1,10 +1,10 @@
-Button {
+.favorite {
     font-size: 12px;
-    -unity-font-style: normal;
-    color: rgb(200, 200, 200);
-    background-color: rgba(0, 0, 0, 0);
+    -unity-text-align: middle-left;
 }
 
-.favoriteEntry {
-    font-size: 12px;
+.favorite Image2 {
+    max-width: 14px;
+    max-height: 12px;
+    margin-top: 2px;
 }
