--- a/Assets/Gemserk.SelectionHistory/Editor/FavoriteAssetsWindow.uss
+++ b/Assets/Gemserk.SelectionHistory/Editor/FavoriteAssetsWindow.uss
@@ -3,10 +3,13 @@
     -unity-text-align: middle-left;
     margin: 2px;
     padding: 3px;
+    background-color: #282828;
+    border-color: black;
+    border-width: 1px;
+    border-radius: 3px;
 }
 
 .favorite #Ping{
-    background-color: black;
     margin-right: 16px;
 }
 
@@ -15,7 +18,7 @@
 }
 
 .favorite ObjectField {
-    visibility: hidden;
+    visibility: visible;
 }
 
 .favorite #Icon {
@@ -30,7 +33,8 @@
     max-width: 16px;
     max-height: 14px;
     margin: 4px;
-    visibility: initial;
+    padding-right: 0px;
+    right: 0px;
     position: absolute;
-    align-self: flex-end;
+    /* align-self: flex-end; */
 }
