--- a/Editor/styles.uss
+++ b/Editor/styles.uss
@@ -17,10 +17,6 @@
     margin-left: 17px;
 }
 
-.favorite ObjectField {
-    visibility: visible;
-}
-
 .favorite #Icon {
     max-width: 16px;
     max-height: 14px;
@@ -37,4 +33,27 @@
     right: 0px;
     position: absolute;
     /* align-self: flex-end; */
+}
+
+.history {
+    font-size: 12px;
+    -unity-text-align: middle-left;
+    margin: 2px;
+    padding: 3px;
+    background-color: #282828;
+    border-color: black;
+    border-width: 1px;
+    border-radius: 3px;
+}
+
+.history Label {
+    margin-left: 17px;
+}
+
+.history #Icon {
+    max-width: 16px;
+    max-height: 14px;
+    visibility: initial;
+    position: absolute;
+    align-self: flex-start;
 }
