--- a/Assets/Gemserk.SelectionHistory/Editor/styles.uss
+++ b/Assets/Gemserk.SelectionHistory/Editor/styles.uss
@@ -79,3 +79,14 @@
     position: absolute;
     /* align-self: flex-end; */
 }
+
+.history #Favorite {
+    max-width: 16px;
+    max-height: 14px;
+    margin: 4px;
+    margin-right: 20px;
+    padding-right: 0px;
+    right: 0px;
+    position: absolute;
+    /* align-self: flex-end; */
+}
