Fixed to clone search bar element and not the template, to fix an issue with searchbar hidden from scroll elements.

--- a/Assets/Gemserk.SelectionHistory/Editor/SearchToolbar.uxml
+++ b/Assets/Gemserk.SelectionHistory/Editor/SearchToolbar.uxml
@@ -5,7 +5,7 @@
     xmlns:editor="UnityEditor.UIElements"
     xsi:noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd"
 >
-    <engine:VisualElement class="searchToolbar">
+    <engine:VisualElement class="searchToolbar" name="SearchToolbar">
         <engine:Image name="Icon" />
         <engine:TextField text="" name="Search"/>
         <engine:Image name="Clear" />   
