Changed to use the root object from the cloned template container instead of the template container itself for both the history element and the favorite element.

--- a/Assets/Gemserk.SelectionHistory/Editor/FavoriteElement.uxml
+++ b/Assets/Gemserk.SelectionHistory/Editor/FavoriteElement.uxml
@@ -6,7 +6,7 @@
     xsi:noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd"
 >
     
-    <engine:VisualElement class="favorite">
+    <engine:VisualElement class="favorite" name="Root">
         <engine:VisualElement name="DragArea">
             <engine:Label text="default" name="Favorite"/>
             <engine:Image name="Icon" />    
